# pysetup-uv

./: README.md  pyproject.toml
pysetup_uv/: cli.py  core.py
src/: cli.py  core.py
